修复打包问题